--- a/IDServerandASPIdentity/IDServerandASPIdentity.csproj
+++ b/IDServerandASPIdentity/IDServerandASPIdentity.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="2.3.0-preview1-update2" />
+    <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.7.0-preview1" />
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="2.3.0-preview1-update2" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.2" PrivateAssets="All" />
